--- a/NLB/app/build.gradle
+++ b/NLB/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.4'
