--- a/NLB/app/src/main/AndroidManifest.xml
+++ b/NLB/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".parents_children"></activity>
+        <activity android:name=".add_child"></activity>
+        <activity android:name=".parents_children" />
         <activity android:name=".parents_profile" />
         <activity android:name=".parents_update" />
         <activity android:name=".parents_hub" />
