Login & Register Changed
I changed Login & Register activities from separate activities into one activity

--- a/NLB/app/src/main/AndroidManifest.xml
+++ b/NLB/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         <activity android:name=".parents_profile" />
         <activity android:name=".parents_update" />
         <activity android:name=".parents_hub" />
-        <activity android:name=".parents_register" />
-        <activity android:name=".parents_login" />
+        <activity android:name=".register" />
         <activity android:name=".welcome_screen" />
         <activity android:name=".main_activity">
             <intent-filter>
