--- a/NLB/app/src/main/AndroidManifest.xml
+++ b/NLB/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".workers_update"></activity>
+        <activity android:name=".coordinators_hub"></activity>
+        <activity android:name=".workers_update" />
         <activity android:name=".add_worker" />
         <activity android:name=".admins_workers" />
         <activity android:name=".admins_hub" />
