--- a/NLB/app/src/main/AndroidManifest.xml
+++ b/NLB/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
         android:allowBackup="true"
@@ -16,9 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".list_of_activities"></activity>
-        <activity android:name=".acitivities_list" />
         <activity android:name=".register_to_activity" />
-        <activity android:name=".activities_list" />
         <activity android:name=".guides_activities" />
         <activity android:name=".guides_hub" />
         <activity android:name=".add_guide" />
